--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -105,7 +105,8 @@
                             </p>
                         </div>
 
-                         
+                        <form id="budgetForm" class="budget-form" novalidate>
+ 
                             <!-- Información Personal -->
                             <div class="form-section">
                                 <div class="section-header">
@@ -495,7 +496,7 @@
                                     </p>
                                     </div>
 
-                       
+                        </form>
                     </div>
 
                     <!-- Información Lateral -->
