--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -105,7 +105,7 @@
                             </p>
                         </div>
 
-                <form id="budgetForm" class="budget-form" novalidate>
+                <form id="budgetForm" class="budget-form" 
  
                             <!-- Información Personal -->
                             <div class="form-section">
@@ -495,7 +495,7 @@
                                     📧 Te responderemos en menos de 2 horas durante nuestro horario de atención.
                                     </p>
                                     </div>
-
+                </form>                   
                 
                     </div>
 
